--- a/app/src/main/res/layout/fragment_wizard_step_one.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_one.xml
@@ -55,6 +55,7 @@
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/arrow_down"/>
 
@@ -96,6 +97,7 @@
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/arrow_down"/>
 
