--- a/app/src/main/res/layout/fragment_register_complete.xml
+++ b/app/src/main/res/layout/fragment_register_complete.xml
@@ -3,35 +3,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginEnd="30dp"
-    android:layout_marginStart="30dp"
-    android:orientation="vertical">
+    android:background="@drawable/background"
+    android:orientation="vertical"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:text="@string/verified"
+        android:textColor="@color/dark_color"
         android:textSize="32sp"
         android:textStyle="bold"/>
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:background="@android:color/holo_blue_light"/>
+        android:src="@drawable/check"/>
 
     <Button
         android:id="@+id/continuE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonGreen"
         android:layout_marginTop="30dp"
-        android:background="@android:color/holo_blue_light"
-        android:text="@string/continuE"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"/>
+        android:text="@string/continuE"/>
 
     <TextView
         android:id="@+id/your_referral_id_is"
@@ -40,17 +38,14 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="@string/your_referral_id_is"
+        android:textColor="@color/dark_color"
         android:textSize="16sp"/>
 
     <Button
         android:id="@+id/register_another_worker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonLink"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        android:background="@null"
-        android:text="@string/register_another_worker"
-        android:textAllCaps="false"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:text="@string/register_another_worker"/>
 
 </LinearLayout>
