--- a/app/src/main/res/layout/fragment_register_confirm.xml
+++ b/app/src/main/res/layout/fragment_register_confirm.xml
@@ -3,9 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginEnd="30dp"
-    android:layout_marginStart="30dp"
-    android:orientation="vertical">
+    android:background="@drawable/background"
+    android:orientation="vertical"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/xaba_red_logo"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,31 +26,21 @@
 
     <EditText
         android:id="@+id/activation_code"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/EditText"
         android:layout_marginTop="30dp"
-        android:hint="@string/activation_code"
-        android:textSize="16sp"/>
+        android:hint="@string/activation_code"/>
 
     <Button
         android:id="@+id/verify"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonGreen"
         android:layout_marginTop="30dp"
-        android:background="@android:color/holo_blue_light"
-        android:text="@string/verify"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"/>
+        android:text="@string/verify"/>
 
     <Button
         android:id="@+id/resend_pin_sms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonLink"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        android:background="@null"
-        android:text="@string/resend_pin_sms"
-        android:textAllCaps="false"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:text="@string/resend_pin_sms"/>
 
 </LinearLayout>
