--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:text="Edit Profile"
         android:layout_marginBottom="20dp"
-        style="@style/ButtonGreen"/>
+        style="@style/ButtonGreenStyle"/>
 
     <TextView
         android:id="@+id/txt_delete_account"
